Added working nav connection from index to about

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="header">
         <div class="logo">
             <img src="img/lambda-black.png" alt="">
         </div>
             <a href="#">Home</a>
-            <a href="#">About</a>
+            <a href="about.html">About</a>
             <a href="#">Projects</a>
             <a href="#">Blog</a>
             <a href="#">Contact</a>
@@ -76,8 +76,8 @@
         
         <footer>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="#top-content">Home</a>
+                <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
