--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
     <div class="logo">
         <img src="img/lambda-black.png" alt="">
     </div>
-        <a href="#">Home</a>
-        <a href="#">About</a>
+        <a href="index.html">Home</a>
+        <a href="#about">About</a>
         <a href="#">Projects</a>
         <a href="#">Blog</a>
         <a href="#">Contact</a>
@@ -72,10 +72,10 @@
       <footer>
         <nav>
           <a href="index.html">Home</a>
-          <a href="#">About</a>
+          <a href="#about">About</a>
           <a href="#">Products</a>
           <a href="#">Blog</a>
-          <a href="#">Contact</a>
+          <a href="#bottomcontent">Contact</a>
         </nav>
       </footer>
     </div><!-- container -->        
